--- a/parts/doctreeview/data/wrapper.html
+++ b/parts/doctreeview/data/wrapper.html
@@ -1,10 +1,10 @@
 <html><head><title>Search results for '$&(WORDS)'</title></head>
 <body bgcolor="#ffffff" text="#000000" link="#aa0000">
-<h2><img src="htdig.gif">
+<h2><img src=$(KDEDIR)/share/apps/kdevdoctreeview/pics/htdig.png>
 Search results for '$&(LOGICAL_WORDS)'</h2>
 <hr noshade size="4">
 <b>
-More <img src="reload.png" alt="*">'s indicate a better match.
+More <img src=$(KDEDIR)/share/apps/kdevdoctreeview/pics/star.png alt="*">'s indicate a better match.
 </b>
 <hr noshade size="1">
 $(HTSEARCH_RESULTS)
@@ -12,5 +12,5 @@ $(PAGEHEADER)
 $(PREVPAGE) $(PAGELIST) $(NEXTPAGE)
 <hr noshade size="4">
 <a href="http://www.htdig.org/">
-<img src="htdig.gif" border="0">ht://Dig $(VERSION)</a>
+<img src=$(KDEDIR)/share/apps/kdevdoctreeview/pics/htdig.png border="0">ht://Dig $(VERSION)</a>
 </body></html>
